# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: BuildSonar.yml  makefile.yml
gendiff/: __init__.py
gendiff/files_for_parsing/: file1_v2.json  file2_v2.json
gendiff/formatters/: __init__.py  json.py  plain.py
gendiff/scripts/: cli.py  diff_builder.py  file_loader.py  gendiff.py  main.py  parser.py
gendiff/scripts/formatters/: __init__.py  plain.py  stylish.py
gendiff/tests/: test_gendiff.py  test_parser.py
gendiff/tests/test_data/test_expected/: flat_plain.txt  nested_plain.txt
tests/: test_gendiff.py
tests/test_data/test_expected/: json_format.txt
