[project]
authors = [{name = 'Nikita', email = 'example@mail.com'}]
name = "gendiff"
version = "0.1.0"
description = "gendiff-app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[project.scripts]
gendiff = "gendiff.scripts.main:main"
generate_diff = "gendiff.scripts.gendiff:generate_diff"
parser = "gendiff.scripts.parser:testing_argparse"
read_file = "gendiff.scripts.parser:read_file"
custom_parse = "gendiff.scripts.parser:custom_parse"
